0.3

- Added feature: UserCountMacro displays number of registered users
- Added feature: SnipCountMacro displays number of snips (all)
- Added feature: TypographyFilter will replace "..." with ellepsis entity
- Required JAR libararies are now included in snipsnap-template.war
- Added feature: {api} now reads from conf/apidocs.txt so {api}
  can point to other online api documentation
- re-validated XHTML 1.0
- Fixed bug: correct context path in cookies
- Added feature: {backlinks} macro lists backlinks, e.g. {backlinks:10}
- Added feature: {sniplinks} macro lists sniplinks, e.g. {sniplinks:4}
- Fixed bug: escape '-' and '*' within code macro
- Fixed bug: first start on a different port than 8668
- Added feature: Introduced Themes for SnipSnap, using a more
  Weblog like theme similiar to MovableType
- Added feature: Interwiki (e.g. [Wiki@MoinMoin]) reads from a standard
  intermap file in conf/intermap.txt
- Added Feature: {isbn} macro now reads books services from conf/bookservices.txt
- Changed logo/validation images
- Introduced snipsnap-copyright snip for page bottom
- Changed semantics of {image} macro, expect images as image-name-id
- Added feature: import/export from web interface
- Fixed bug: list detection
- Changed macro interface: User Writer instead of StringBuffer and Refactoring
  "Introduce Parameter Object"
- Added Feature: {image} tag allows positioned and floating images
- Added snipsnap-help to default snips (contains text formatting)
- Introduced: {list-of-macros}
- Replaced {snips-by-recent} by {recent-changes} macro
- Defaults snips are now loaded from conf/snipsnap.snip
- Added feature: bullet, square, numerated (numbers, alpha, greek, japanese)
- Changed feature: Post blog prepends to the post
- Fixed bug: SnipSnap now uses <dc:title> in RSS and DC.Title in HTML
- Added feature: Introduced portlet snip snipsnap-portlet-<number>
- Added feature: VerticalListFormatter introduced
- Added feature: {logins} macro