@@ -19,7 +19,7 @@ org.snipsnap.snip.filter.macro.MacroListMacro
 org.snipsnap.snip.filter.macro.QuoteMacro
 org.snipsnap.snip.filter.macro.RecentChangesMacro
 org.snipsnap.snip.filter.macro.RecentWeblogMacro
-org.snipsnap.snip.filter.macro.ScriptMacro
+#org.snipsnap.snip.filter.macro.ScriptMacro
 org.snipsnap.snip.filter.macro.SearchMacro
 org.snipsnap.snip.filter.macro.SinceLastVisitMacro
 org.snipsnap.snip.filter.macro.SnipLinkMacro
@@ -28,3 +28,6 @@ org.snipsnap.snip.filter.macro.UserMacro
 org.snipsnap.snip.filter.macro.UserSnipMacro
 org.snipsnap.snip.filter.macro.VersionMacro
 org.snipsnap.snip.filter.macro.WeblogMacro
+org.snipsnap.snip.filter.macro.UserCountMacro
+org.snipsnap.snip.filter.macro.SnipCountMacro
+org.snipsnap.snip.filter.macro.HelloWorldMacro
